<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">StarFiles</string>
    <string name="empty_text">Empty</string>
    <string name="tab_country">Country</string>
    <string name="tab_continent">Continent</string>
    <string name="tab_city">City</string>
    <string name="tab_scroll_view">Scroll View</string>
    <string name="header_text">aksdjhfsdakflsdfdskjl</string>


    <string name="choose_file_to_send">选择要发送的文件</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g> </string>
    <string name="title_not_connected">not connected</string>

    <!-- BlueDeviceListActivity -->


    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->


    <string name="connect">Connect a device</string>
    <string name="discoverable">Make discoverable</string>
    <string name="title_activity_file_browse">FileBrowse</string>
    <string name="hello_world">Hello world!</string>



    <string name="action_settings">Settings</string>
    <string name="menu_select_all">全选</string>
    <string name="menu_cancel_select_all">取消全选</string>
    <string name="menu_sort">排序</string>
    <string name="menu_new">新建文件夹</string>
    <string name="menu_diaplay_hiden">显示点文件和隐藏文件</string>
    <string name="menu_not_diaplay_hiden">隐藏点文件和隐藏文件</string>
    <string name="menu_refresh">刷新</string>
    <string name="menu_sort_name">名称</string>
    <string name="menu_sort_size">大小</string>
    <string name="menu_sort_time">时间</string>
    <string name="menu_sort_type">类型</string>
    <string name="input_new_folder_info">请输入文件夹名称</string>
    <string name="new_folder_exist_err">创建文件夹失败，文件夹已存在.</string>
    <string name="new_folder_spec_char_err">创建文件夹失败，文件夹名称包含特殊字符“/”.</string>
    <string name="new_folder_null_err">创建文件夹失败，文件夹名称输入为空.</string>
    <string name="input_rename_info">请输入新名称</string>
    <string name="rename_exist_err">重命名失败，使用该名称的文件已存在.</string>
    <string name="rename_spec_char_err">重命名失败，重命名名称包含特殊字符“/”.</string>
    <string name="rename_null_err">重命名失败，重命名名称输入为空.</string>
    <string name="copy">复制</string>
    <string name="cut">剪切</string>
    <string name="send">发送</string>
    <string name="rename">重命名</string>
    <string name="delete">删除</string>
    <string name="delete_info">确认删除?</string>
    <string name="delete_folder_err">删除文件夹%s失败！</string>
    <string name="delete_file_err">删除文件%s失败！</string>
    <string name="detail">详情</string>
    <string name="detail_path">路径：</string>
    <string name="detail_size">大小：</string>
    <string name="detail_can_read">可读：</string>
    <string name="detail_can_write">可写：</string>
    <string name="detail_hidden">隐藏：</string>
    <string name="copy_file_exist_info">文件%s已存在，是否要覆盖？</string>
    <string name="select_all">全选</string>
    <string name="select_none">不选</string>
    <string name="cancle">取消</string>
    <string name="back">返回</string>
    <string name="paste">粘帖</string>
    <string name="alread_in_root_path">当前路径，已经是根路径</string>

    <string name="abouttext">Oooh\n
\n
We\'re no strangers to love\n
You know the rules and so do I\n
A full commitment\'s what I\'m thinking of\n
You wouldn\'t get this from any other guy\n
\n
I just wanna tell you how I\'m feeling\n
Gotta make you understand\n
\n
Never gonna give you up\n
Never gonna let you down\n
Never gonna run around and desert you\n
Never gonna make you cry\n
Never gonna say goodbye\n
Never gonna tell a lie and hurt you\n
\n
We\'ve known each other for so long\n
Your heart\'s been aching, but\n
You\'re too shy to say it\n
Inside, we both know what\'s been going on\n
We know the game and we\'re gonna play it\n
\n
And if you ask me how I\'m feeling\n
Don\'t tell me you\'re too blind to see\n
\n
Never gonna give you up\n
Never gonna let you down\n
Never gonna run around and desert you\n
Never gonna make you cry\n
Never gonna say goodbye\n
Never gonna tell a lie and hurt you\n
\n
Never gonna give you up\n
Never gonna let you down\n
Never gonna run around and desert you\n
Never gonna make you cry\n
Never gonna say goodbye\n
Never gonna tell a lie and hurt you\n
\n
(Ooh, give you up)\n
(Ooh, give you up)\n
Never gonna give, never gonna give\n
(Give you up)\n
Never gonna give, never gonna give\n
(Give you up)\n
\n
We\'ve known each other for so long\n
Your heart\'s been aching, but\n
You\'re too shy to say it\n
Inside, we both know what\'s been going on\n
We know the game and we\'re gonna play it\n
\n
I just wanna tell you how I\'m feeling\n
Gotta make you understand\n
\n
Never gonna give you up\n
Never gonna let you down\n
Never gonna run around and desert you\n
Never gonna make you cry\n
Never gonna say goodbye\n
Never gonna tell a lie and hurt you\n
\n
Never gonna give you up\n
Never gonna let you down\n
Never gonna run around and desert you\n
Never gonna make you cry\n
Never gonna say goodbye\n
Never gonna tell a lie and hurt you\n
\n
Never gonna give you up\n
Never gonna let you down\n
Never gonna run around and desert you\n
Never gonna make you cry\n
Never gonna say goodbye\n
Never gonna tell a lie and hurt you</string>
</resources>
