<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	android:orientation="vertical"
	android:background="@color/ripple_background">
    
	<LinearLayout
	    android:id="@+id/fileNavigateLinearLayout"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
		android:layout_margin="5dp"
	    >

		<com.rey.material.widget.Button
			android:layout_marginLeft="5dp"
			android:layout_marginRight="5dp"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:gravity="left"
			android:singleLine="true"
			android:background="@drawable/button_shape3"
			android:textColor="#fff"
			android:textSize="18dp"
			app:rd_enable="false"
			app:rd_rippleType="wave"
			android:id="@+id/path"
			/>
		<com.rey.material.widget.Button
			android:layout_marginLeft="5dp"
			android:layout_marginRight="5dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:background="@drawable/button_shape3"
			android:text="返回"
			android:textColor="#fff"
			android:textSize="18dp"
			app:rd_enable="true"
			app:rd_rippleType="wave"
			app:rd_maskType="rectangle"
			app:rd_cornerRadius="5dp"
			android:id="@+id/back"
			/>
	</LinearLayout>
    <ListView
        android:id="@+id/listview"
		android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" 
        />
    <LinearLayout
	    android:id="@+id/fileOperateLinearLayout"
		android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:visibility="visible"	
	    >
		<com.rey.material.widget.Button
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_margin="5dp"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:background="@drawable/button_shape3"
			android:text="@string/delete"
			android:textColor="#fff"
			android:textSize="15dp"
			app:rd_enable="true"
			app:rd_rippleType="wave"
			app:rd_maskType="rectangle"
			app:rd_cornerRadius="5dp"
			android:id="@+id/del"
			/>
		<com.rey.material.widget.Button
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_margin="5dp"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:background="@drawable/button_shape3"
			android:text="@string/copy"
			android:textColor="#fff"
			android:textSize="15dp"
			app:rd_enable="true"
			app:rd_rippleType="wave"
			app:rd_maskType="rectangle"
			app:rd_cornerRadius="5dp"
			android:id="@+id/copy"
			/>
		<com.rey.material.widget.Button
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_margin="5dp"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:background="@drawable/button_shape3"
			android:text="@string/cut"
			android:textColor="#fff"
			android:textSize="15dp"
			app:rd_enable="true"
			app:rd_rippleType="wave"
			app:rd_maskType="rectangle"
			app:rd_cornerRadius="5dp"
			android:id="@+id/cut"
			/>
		<com.rey.material.widget.Button
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_margin="5dp"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:background="@drawable/button_shape3"
			android:text="@string/send"
			android:textColor="#fff"
			android:textSize="15dp"
			app:rd_enable="true"
			app:rd_rippleType="wave"
			app:rd_maskType="rectangle"
			app:rd_cornerRadius="5dp"
			android:id="@+id/send"
			/>
		<com.rey.material.widget.Button
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_margin="5dp"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:background="@drawable/button_shape3"
			android:text="@string/select_all"
			android:textColor="#fff"
			android:textSize="15dp"
			app:rd_enable="true"
			app:rd_rippleType="wave"
			app:rd_maskType="rectangle"
			app:rd_cornerRadius="5dp"
			android:id="@+id/selectAll"
			/>
	</LinearLayout>
	<LinearLayout
	    android:id="@+id/pasteOperateLinearLayout"
	    android:layout_alignParentBottom="true"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:visibility="gone"
	    >
		<com.rey.material.widget.Button
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_margin="5dp"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:background="@drawable/button_shape3"
			android:text="@string/paste"
			android:textColor="#fff"
			android:textSize="15dp"
			app:rd_enable="true"
			app:rd_rippleType="wave"
			app:rd_maskType="rectangle"
			app:rd_cornerRadius="5dp"
			android:id="@+id/paste"
			/>
		<com.rey.material.widget.Button
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_margin="5dp"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:background="@drawable/button_shape3"
			android:text="@string/cancle"
			android:textColor="#fff"
			android:textSize="15dp"
			app:rd_enable="true"
			app:rd_rippleType="wave"
			app:rd_maskType="rectangle"
			app:rd_cornerRadius="5dp"
			android:id="@+id/cancel"
			/>
	</LinearLayout>
</LinearLayout>
